<resources>
    <string name="app_name">巴士助手</string>

    <string name="city_text">当前所在城市：%s </string>
    <string name="bus_title">市内公交</string>
    <string name="coach_title">长途汽车</string>

    <string name="search_hint">搜索</string>

    <string name="line_title">线路</string>
    <string name="platform_title">站点</string>

    <string name="line_hint">查询线路（如：25）</string>
    <string name="platform_hint">查询站点（如：长途东站）</string>

    <string name="from_hint">出发地</string>
    <string name="to_hint">目的地</string>

    <string name="ticket_title">车票</string>
    <string name="station_title">车站</string>

    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="user_nickname_text">昵称</string>
    <string name="user_nickname_hint">请输入昵称</string>
    <string name="user_account_text">账号</string>
    <string name="user_account_hint">请输入账号</string>
    <string name="user_password_text">密码</string>
    <string name="user_password_hint">请输入密码</string>
    <string name="login_btn_text">登录</string>
    <string name="register_btn_text">注册</string>
    <string name="user_re_password_text">确认密码</string>
    <string name="user_re_password_hint">请再次输入密码</string>
    <string name="login_empty">请输入账号和密码</string>
    <string name="login_error">账号或密码错误</string>
    <string name="re_account_exist">账户已存在</string>
    <string name="re_password_error">两次输入的密码不一致</string>
    <string name="register_success">注册成功</string>

    <string name="buy_btn_text">购买</string>
    <string name="buy_success">购买成功</string>
    <string name="info_hint">车　次:</string>
    <string name="start_date_hint">发　车:</string>
    <string name="order_num_hint">订单号:</string>
    <string name="money_hint">金　额:</string>
    <string name="date_hint">时　间:</string>
    <string name="order_tip">可到我的订单查看</string>

    <string name="my_order_text">我的订单</string>
    <string name="reset_password_text">修改密码</string>
    <string name="logout_btn_text">注销登录</string>

    <string name="old_password_text_hint">请输入原密码</string>
    <string name="new_password_text_hint">请输入新密码</string>
    <string name="old_password_error">原密码错误</string>
    <string name="reset_password_success">修改密码成功</string>

    <string name="submit_btn_text">确定</string>

    <string name="exit_tip">再按一次退出程序</string>


</resources>
