<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_mid"
    android:orientation="vertical">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@mipmap/app_icon"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/user_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/user_account_hint"
        android:maxLength="16"
        android:textSize="16sp"
        android:inputType="number"/>

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/user_password_hint"
        android:inputType="textPassword"
        android:maxLength="16"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/login_btn_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/register_btn_text"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
