<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_mid"
    android:orientation="vertical">

    <EditText
        android:id="@+id/old_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/old_password_text_hint"
        android:inputType="textPassword"
        android:maxLength="16"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/new_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/new_password_text_hint"
        android:inputType="textPassword"
        android:maxLength="16"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/submit_btn_text"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>