<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_mid"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/ticket_from_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/from_hint"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="--"/>

        <EditText
            android:id="@+id/ticket_to_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:hint="@string/to_hint"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/ticket_search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:text="@string/search_hint"/>

    </LinearLayout>

    <ListView
        android:id="@+id/ticket_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white" />

</LinearLayout>
