<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_mid">

    <android.support.v7.widget.CardView
        android:id="@+id/city_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        card_view:cardElevation="4dp">

        <TextView
            android:id="@+id/city_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:text="@string/city_text"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical|right"
            android:src="@mipmap/icon_arr"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/bus_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        card_view:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/bus_iv"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@mipmap/icon_bus"
                android:tint="@color/colorPrimary"/>

            <TextView
                android:id="@+id/bus_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/bus_iv"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/bus_title"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/coach_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        card_view:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/coach_iv"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@mipmap/icon_coach"
                android:tint="@color/colorPrimary"/>

            <TextView
                android:id="@+id/coach_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/coach_iv"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/coach_title"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
