<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_mid"
    android:padding="10dp">

    <RelativeLayout
        android:id="@+id/rl_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/iv_success"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/icon_user" />

        <TextView
            android:id="@+id/tv_hint_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_success"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_third_hint"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/buy_success"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_hint_success"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_info_export_background" />

            <ImageView
                android:id="@+id/iv_export"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_info_export" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:gravity="top"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_payInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-240dp"
                    android:background="@drawable/ticket_bg"
                    android:gravity="top"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info_hint"
                            android:textColor="#939393"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/info_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="#939393"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_info"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_date_hint"
                            android:textColor="#939393"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/start_date_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="#939393"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_order_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_start_date"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order_num_hint"
                            android:textColor="#939393"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/order_num_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="#939393"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_total_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_order_num"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/money_hint"
                            android:textColor="#939393"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/money_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="#939393"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_payment_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_total_money"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_hint"
                            android:textColor="#939393"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/date_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="#939393"
                            android:textSize="16sp" />
                    </LinearLayout>

                </RelativeLayout>

            </RelativeLayout>

        </FrameLayout>

    </RelativeLayout>

</RelativeLayout>